test/ui/test/lowering/public-not-allowed-on-module-headers.stderr
error[E013]: attribute ‘public’ is ascribed to a module header declaration
 --> ${TEST_FOLDER}/lowering/public-not-allowed-on-module-headers.lushui:1:1
  |
1 | @(public self)
  | ^^^^^^^^^^^^^^ misplaced attribute
  |
 --> ${TEST_FOLDER}/lowering/public-not-allowed-on-module-headers.lushui:2:1
  |
2 | module
  | ------ incompatible item
  |
 note: attribute ‘public’ can only be ascribed to declarations except constructors and module headers

error: aborting due to previous error

