test/ui/test/lowering/public-not-allowed-on-module-headers.lushui
;;; TEST fail check

@(public self)
module

